Only fire accessible load complete events on the main frame on Android.

BUG=604524

Review URL: https://codereview.chromium.org/1894113003

Cr-Commit-Position: refs/heads/master@{#388896}

Former-commit-id: 93972adf9120670ef5c6c42b609aeeeb4bc41ad4